# FastAPI_Task

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
tests/: test_registration.py
